# test-repo

./: .gitignore  README.md  hello-possum.md
ascii-possum-agent/: PRP.md  README.md  pyproject.toml
ascii-possum-agent/src/ascii_possum/: __init__.py  cli.py  renderer.py
ascii-possum-agent/tests/: test_cli.py  test_renderer.py
hello-possum/: .gitignore  Makefile  PRP.md  README.md  pyproject.toml
hello-possum/src/hello_possum/: __init__.py  art.py  cli.py  greetings.py
hello-possum/tests/: test_cli.py  test_greetings.py
possum-jokes-agent/: .env.example  .gitignore  PRP.md  README.md  pyproject.toml
possum-jokes-agent/src/possum_jokes/: __init__.py  agent.py  cli.py  jokes.py  prompt.py
possum-jokes-agent/tests/: test_jokes.py
