[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascii-possum-agent"
version = "0.1.0"
description = "A CLI agent that turns words and sentences into ASCII art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BizkitAris"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]

[project.scripts]
ascii-possum = "ascii_possum.cli:main"
ap = "ascii_possum.cli:main"

[project.urls]
Homepage = "https://github.com/bizkitaris/test-repo"

[tool.hatch.build.targets.wheel]
packages = ["src/ascii_possum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
