[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-possum"
version = "0.1.0"
description = "A communal CLI greeting tool with possum vibes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BizkitAris"},
]
keywords = ["cli", "greeting", "possum", "retro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
hello-possum = "hello_possum.cli:main"
hp = "hello_possum.cli:main"

[project.urls]
Homepage = "https://github.com/bizkitaris/test-repo"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_possum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
