[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "possum-jokes-agent"
version = "0.1.0"
description = "A Pydantic AI agent that generates possum-themed jokes with attitude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BizkitAris"},
]
dependencies = [
    "pydantic-ai>=0.0.15",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
possum-jokes = "possum_jokes.cli:main"
pj = "possum_jokes.cli:main"

[project.urls]
Homepage = "https://github.com/bizkitaris/test-repo"

[tool.hatch.build.targets.wheel]
packages = ["src/possum_jokes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
